--- a/springBootJwt/.settings/org.eclipse.wst.common.component
+++ b/springBootJwt/.settings/org.eclipse.wst.common.component
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="springBootJwt">
+        
+    <wb-module deploy-name="springJwtBoot">
+                
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
+                
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <property name="context-root" value="springBootJwt"/>
-        <property name="java-output-path" value="/springBootJwt/target/classes"/>
+                
+        <property name="java-output-path" value="/springJwtBoot/target/classes"/>
+        <property name="context-root" value="springJwtBoot"/>
+            
     </wb-module>
+    
 </project-modules>
