--- a/springBootJwt/.settings/org.eclipse.wst.common.component
+++ b/springBootJwt/.settings/org.eclipse.wst.common.component
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
         
-    <wb-module deploy-name="springJwtBoot">
+    <wb-module deploy-name="springBootJwt">
                 
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
                 
@@ -11,7 +11,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
                 
         <property name="java-output-path" value="/springJwtBoot/target/classes"/>
-        <property name="context-root" value="springJwtBoot"/>
+        <property name="context-root" value="springBootJwt"/>
             
     </wb-module>
     
